tests/testWorkflows/invalid_workflows/tooManyActionInputsWorkflow.playbook
{
    "name": "tooManyActionInputsWorkflow",
    "workflows": [
        {
            "actions": [
                {
                    "action_name": "returnPlusOne",
                    "app_name": "HelloWorldBounded",
                    "arguments": [
                        {
                            "name": "number",
                            "value": "1"
                        },
                        {
                            "name": "number2",
                            "value": "2"
                        }
                    ],
                    "device_id": 1,
                    "id": "093a54db-a622-450d-aa6c-c13aa6d01829",
                    "name": "one"
                },
                {
                    "action_name": "helloWorld",
                    "app_name": "Invalid",
                    "arguments": [],
                    "device_id": 1,
                    "id": "39dc0a73-3426-4b49-bf3c-5303038dea15",
                    "name": "start"
                }
            ],
            "branches": [
                {
                    "conditions": [
                        {
                            "action_name": "regMatch",
                            "app_name": "HelloWorldBounded",
                            "arguments": [
                                {
                                    "name": "regex",
                                    "value": "(.*)"
                                }
                            ],
                            "transforms": [
                                {
                                    "action_name": "length",
                                    "app_name": "HelloWorldBounded",
                                    "arguments": []
                                }
                            ]
                        }
                    ],
                    "destination_id": "093a54db-a622-450d-aa6c-c13aa6d01829",
                    "source_id": "39dc0a73-3426-4b49-bf3c-5303038dea15",
                    "status": "Success"
                }
            ],
            "name": "multiactionWorkflow",
            "start": "39dc0a73-3426-4b49-bf3c-5303038dea15"
        }
    ]
}